[project]
name = "rag-chatbot-render"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=24.1.0",
    "fastapi>=0.109.0",
    "openai>=2.11.0",
    "openai-agents>=0.6.3",
    "pydantic>=2.5.3",
    "python-dotenv>=1.0.0",
    "qdrant-client>=1.7.0",
    "requests>=2.31.0",
    "trafilatura>=1.6.4",
    "uvicorn[standard]>=0.27.0",
]
